samples/_failures_safe/1761595863_50d5ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abcccb7a.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_abcccb7a.c:170:5: error: expected declaration or statement at end of input
  170 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_abcccb7a.c:170:5: error: expected declaration or statement at end of input
